# better_shiny

./: .gitignore  README.md  pyproject.toml
better_shiny/: _local_storage.py  _types.py  _utils.py
better_shiny/app/: __init__.py  app.py  better_shiny.py  dominator_response.py  message_sender.py  session_middleware.py
better_shiny/communication/: __init__.py  communication_handler.py  dynamic_function.py  endpoint_collector.py  messages.py  session.py  session_collector.py
better_shiny/elements/: __init__.py  dataframe.py  dict.py  matplot.py  table.py
better_shiny/frontend/: .prettierrc  package-lock.json  package.json  tsconfig.json  vite.config.ts
better_shiny/frontend/src/: events.ts  index.css  index.ts  lazy.ts  message-handlers.ts  stringify.ts  utils.ts
better_shiny/frontend/src/client/: client.ts  index.ts  messages.ts
better_shiny/reactive/: __init__.py  dynamic.py  event.py  lifecycle.py  reactive.py  stable_value.py  value.py
better_shiny/static/: client.js  index.js  message-handlers.js  utils.js
better_shiny/themes/: __init__.py  _base_theme.py  chota.py  milligram.py  picnic.py  pico.py  pure.py  water.py
better_shiny/themes/ionic/: __init__.py  ionic.py  tags.py
better_shiny/utils/: __init__.py  logging.py  timer.py
cmd/: app.py  game_of_life.py  ionic.py  run.py
examples/: custom_components.py  hello_world.py  lazy_loading.py  lifecycle_hooks.py  reactive_values.py  stable_values.py  subscribing_to_values.py  themes.py
scripts/: extract_examples.py
